- Reorganized base templates - Added user dashboard - Added tests for dashboard and not logged functionality

--- a/apps/rcl/templates/rcl/main/join.html
+++ b/apps/rcl/templates/rcl/main/join.html
@@ -1,4 +1,4 @@
-{% extends "rcl/main/base_main.html" %}
+{% extends "rcl/base_main.html" %}
 {% load i18n %}
 
 {% block title%}Rainbow Crystal Land - How to Join{% endblock %}
