Update templates structure Add basic views/templates for registration Update Bootstrap to Bootstrap3

--- a/apps/rcl/templates/rcl/main/history.html
+++ b/apps/rcl/templates/rcl/main/history.html
@@ -1,7 +1,7 @@
-{% extends "rcl/base_main.html" %}
+{% extends "rcl/main/base.html" %}
 {% load i18n %}
 
-{% block title%}Rainbow Crystal Land - History{% endblock %}
+{% block title%}{% trans "Rainbow Crystal Land" %} - {% trans "History" %}{% endblock %}
 
 {% block content %}
 
