--- a/apps/rcl/templates/rcl/main/home.html
+++ b/apps/rcl/templates/rcl/main/home.html
@@ -1,7 +1,7 @@
-{% extends "rcl/base_main.html" %}
+{% extends "rcl/main/base.html" %}
 {% load i18n %}
 
-{% block title%}Rainbow Crystal Land - Welcome home{% endblock %}
+{% block title%}{% trans "Rainbow Crystal Land" %} - {% trans "Welcome Home" %}{% endblock %}
 
 {% block content %}
 
