--- a/apps/rcl/templates/rcl/main/dci.html
+++ b/apps/rcl/templates/rcl/main/dci.html
@@ -1,7 +1,7 @@
-{% extends "rcl/base_main.html" %}
+{% extends "rcl/main/base.html" %}
 {% load i18n %}
 
-{% block title%}Rainbow Crystal Land - Declaration of Common Intention{% endblock %}
+{% block title%}{% trans "Rainbow Crystal Land" %} - {% trans "Declaration of Common Intention" %}{% endblock %}
 
 {% block content %}
 
