Included pybb Forum app, updated requirements and settings Included static context processor New app pybb_custom for customizing Forum behavior Updates in base.html template to show messages and breadscrumbs Added namespaces for URLs Some PEP8

--- a/apps/users/templates/users/base.html
+++ b/apps/users/templates/users/base.html
@@ -10,7 +10,7 @@
         </a>
 
         <ul class="dropdown-menu">
-            <li><a tabindex="-1" href="{% url 'users-dashboard' %}">{% trans 'Dashboard' %}</a></li>
+            <li><a tabindex="-1" href="{% url 'users:dashboard' %}">{% trans 'Dashboard' %}</a></li>
             <li><a tabindex="-1" href="{% url 'logout' %}">{% trans 'Logout' %}</a></li>
         </ul>
     </div>
