--- a/apps/rcl/templates/rcl/main/base.html
+++ b/apps/rcl/templates/rcl/main/base.html
@@ -45,36 +45,40 @@
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
                               <li id="menu-home"><a href="{% url 'home' %}">Home</a></li>
-                              <li id="menu-history"><a href="{% url 'main-history' %}">History</a></li>
-                              <li id="menu-dci"><a href="{% url 'main-dci' %}">Declaration of Common Intention</a></li>
-                              <li id="menu-join"><a href="{% url 'main-join' %}">How to Join</a></li>
+                              <li id="menu-history"><a href="{% url 'rcl:main-history' %}">History</a></li>
+                              <li id="menu-dci"><a href="{% url 'rcl:main-dci' %}">Declaration of Common Intention</a></li>
+                              <li id="menu-join"><a href="{% url 'rcl:main-join' %}">How to Join</a></li>
                             </ul>
 
-                            {% if user.is_authenticated %}
                               <ul class="nav navbar-nav navbar-right">
-                                <li class="dropdown" id="menu-user">
-                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% firstof user.first_name user.email %} <b class="caret"></b></a>
-                                  <ul class="dropdown-menu">
-                                    <li><a href="#">Profile</a></li>
-                                    <li><a id="menu-logout" href="{% url 'auth_logout' %}">Logout</a></li>
-                                  </ul>
+                                <li id="menu-forum">
+                                      <a href="{% url 'pybb:index' %}" >Forum</a>
                                 </li>
+                                {% if user.is_authenticated %}
+                                  <li class="dropdown" id="menu-user">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% firstof user.first_name user.email %} <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                      <li><a href="#">Profile</a></li>
+                                      <li><a id="menu-logout" href="{% url 'auth_logout' %}">Logout</a></li>
+                                {% else %}
+                                    <li id="menu-login">
+                                      <a href="{% url 'auth_login' %}" >Login</a>
+                                    </li>
+                                    <li id="menu-login">
+                                      <a href="{% url 'registration_register' %}" >Register</a>
+                                    </li>
+                                {% endif %}
                               </ul>
-                            {% else %}
-                              <ul class="nav navbar-nav navbar-right">
-                                  <li id="menu-login">
-                                    <a href="{% url 'auth_login' %}" >Login</a>
-                                  </li>
-                                  <li id="menu-login">
-                                    <a href="{% url 'registration_register' %}" >Register</a>
-                                  </li>
-                                </ul>
-                            {% endif %}
+                            
                             {% block extra_menu %}{% endblock %}
                           </div><!-- /.navbar-collapse -->
                         </nav>
                       </div>
                       <div class="row" id="content">
+                        {% block breadcrumb %}{% endblock %}
+
+                        {% block messages %}{% include "messages.html" %}{% endblock %}
+
                         <div class="col-md-10 col-md-offset-1">
                         {% block content %}{% endblock %}
                         </div>
@@ -92,7 +96,7 @@
         <!-- Javascript files -->
         <script src="{% static 'js/jquery-1.8.0.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.3.0.3.min.js' %}"></script>
-        {% block extrascript %}
+        {% block extra_script %}
         {% endblock %}
     </body>
 </html>
