--- a/apps/rcl/templates/rcl/main/base.html
+++ b/apps/rcl/templates/rcl/main/base.html
@@ -10,7 +10,9 @@
         <meta name="description" content="{% block meta-description %}{% endblock %}">
 
         <!-- Bootstrap -->
-        <link href="{% static 'css/bootstrap.3.0.3.min.css' %}" rel="stylesheet">
+        <!-- We don use the minified version in this early development stage-->
+        <link href="{% static 'css/bootstrap.3.0.3.custom.css' %}" rel="stylesheet">
+        <!--link href="{% static 'css/bootstrap.3.0.3.min.custom.css' %}" rel="stylesheet"-->
         <link href="{% static 'css/bootstrap-theme.3.0.3.min.css' %}" rel="stylesheet">
         <!-- Site stlesheet, keep last to override possible values-->
         <link href="{% static 'css/rcl.css' %}" rel="stylesheet">
@@ -58,7 +60,8 @@
                                   <li class="dropdown" id="menu-user">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% firstof user.first_name user.email %} <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                      <li><a href="#">Profile</a></li>
+                                      <li><a href="{% url 'users:profile-edit' %}">Profile</a></li>
+                                      <li><a href="{% url 'pybb:edit_profile' %}">Forum Settings</a></li>
                                       <li><a id="menu-logout" href="{% url 'auth_logout' %}">Logout</a></li>
                                 {% else %}
                                     <li id="menu-login">
@@ -74,7 +77,7 @@
                           </div><!-- /.navbar-collapse -->
                         </nav>
                       </div>
-                      <div class="row" id="content">
+                      <div class="row content" id="content">
                         {% block breadcrumb %}{% endblock %}
 
                         {% block messages %}{% include "messages.html" %}{% endblock %}
