--- a/apps/rcl/templates/rcl/main/history.html
+++ b/apps/rcl/templates/rcl/main/history.html
@@ -1,7 +1,7 @@
 {% extends "rcl/main/base.html" %}
 {% load i18n %}
 
-{% block title%}{% trans "Rainbow Crystal Land" %} - {% trans "History" %}{% endblock %}
+{% block title%}{% trans "RCL" %} - {% trans "History" %}{% endblock %}
 
 {% block content %}
 
@@ -11,8 +11,8 @@
 
 {% endblock %}
 
-{% block extrascript %}
+{% block extra_script %}
 <script type="text/javascript">
-    $('#menu-history').addClass('active');
+    $('#menu-vision').addClass('active');
 </script>
 {% endblock %}
