--- a/templates/pybb/base.html
+++ b/templates/pybb/base.html
@@ -22,4 +22,7 @@
 
 {% block extra_script %}
 	<script src="{% static 'pybb/js/pybbjs.js' %}"></script>
+	<script type="text/javascript">
+    	$('#menu-forum').addClass('active');
+	</script>
 {% endblock %}
