--- a/apps/rcl/templates/rcl/main/base.html
+++ b/apps/rcl/templates/rcl/main/base.html
@@ -21,15 +21,16 @@
     </head>
 
     <body>
-        <div class="row-fluid main">
+        <div id="wrap"> 
+        <div class="row-fluid main container">
             <div class="span10 offset1">
 
                 <div class="row-fluid">
-                    <div class="header"><h1>Rainbow Crystal Lands</h1></div>
+                    <div class="header"><h1>Rainbow Crystal Land</h1></div>
                 </div>
 
                 <div class="row-fluid">
-                    <div class="col-md-10 col-md-offset-1">
+                    <div class="col-md-12 col-md-offset-0">
 
                       <div class="row">
                         <nav class="navbar navbar-inverse" role="navigation">
@@ -47,16 +48,25 @@
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
                               <li id="menu-home"><a href="{% url 'home' %}">Home</a></li>
-                              <li id="menu-history"><a href="{% url 'rcl:main-history' %}">History</a></li>
-                              <li id="menu-dci"><a href="{% url 'rcl:main-dci' %}">Declaration of Common Intention</a></li>
+                              <li id="menu-about"><a href="{% url 'rcl:main-about' %}">About Us</a></li>
+                              
+                              <li class="dropdown" id="menu-vision">
+                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Vision<b class="caret"></b></a>
+                                  <ul class="dropdown-menu">
+                                    <li id="menu-history"><a href="{% url 'rcl:main-history' %}">History</a></li>
+                                    <li id="menu-dci"><a href="{% url 'rcl:main-dci' %}">Declaration of Common Intention</a></li>
+                                  </ul>
+                              </li>
+
                               <li id="menu-join"><a href="{% url 'rcl:main-join' %}">How to Join</a></li>
+                              <li id="menu-donate"><a href="{% url 'rcl:main-donate' %}">Donate</a></li>
                             </ul>
 
                               <ul class="nav navbar-nav navbar-right">
-                                <li id="menu-forum">
-                                      <a href="{% url 'pybb:index' %}" >Forum</a>
-                                </li>
                                 {% if user.is_authenticated %}
+                                  <li id="menu-forum">
+                                      <a href="{% url 'pybb:index' %}" >Forum</a>
+                                  </li>
                                   <li class="dropdown" id="menu-user">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% firstof user.first_name user.email %} <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
@@ -88,18 +98,21 @@
                       </div>
                     </div>
                 </div>
-
-                <div class="row">
-                  <div class="col-md-10 col-md-offset-1 footer">
-                    Here goes the footer (if any)
-                  </div>
-                </div>
             </div>
         </div>
+        <div id="push"></div>
+
+        <div class = "navbar navbar-default navbar-fixed-bottom footer">
+            <div class = "container">
+            <a href="{% url 'home'%}">Home</a> | <a href="#">Contact Us</a>
+          </div>
+        </div>
+
         <!-- Javascript files -->
         <script src="{% static 'js/jquery-1.8.0.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.3.0.3.min.js' %}"></script>
         {% block extra_script %}
         {% endblock %}
+      </div> <!-- id:wrap -->
     </body>
 </html>
