--- a/apps/rcl/templates/rcl/main/home.html
+++ b/apps/rcl/templates/rcl/main/home.html
@@ -1,17 +1,31 @@
 {% extends "rcl/main/base.html" %}
 {% load i18n %}
 
-{% block title%}{% trans "Rainbow Crystal Land" %} - {% trans "Welcome Home" %}{% endblock %}
+{% block title%}{% trans "RCL" %} - {% trans "Welcome Home" %}{% endblock %}
 
 {% block content %}
 
-    {% blocktrans %}
-        Welcome home! Here will go the content of the main page.
-    {% endblocktrans %}
+		<p>
+		{% blocktrans %}
+    	Rainbow Crystal Land (RCL) is a global self-sufficient network of open and ownerless lands housing sustainable communities of free and equal individuals living in peace and harmony with the earth. RCL is an organically living and growing common vision shared by thousands of people around the world; it is not an organization or a set of rules and there is no central leadership. RCL is a social movement offering a complete alternative living solution for everyone. There are many similar visions, communities and networks out there - RCL competes with no one and co-operates with everyone.
+		RCL is unique because:
+		{% endblocktrans %}
+		</p>
+
+		<ul>
+			<li>{% trans "We intend to <strong>free lands</strong> from ownership." %}</li>
+			<li>{% trans "Our communities are <strong>open to all</strong>." %}</li>
+			<li>{% trans "Our structure is completely <strong>horizontal and decentralized</strong>." %}</li>
+			<li>{% trans "We give equal value to nomads and people who prefer to stay. Our <strong>rights and responsibilities are equal</strong> no matter who we are." %}</li>
+			<li>{% trans "We intend <strong>not to use money</strong> as a means of exchange inside and between our communities and to freely share what we don’t need with our neighbour." %}</li>
+		</ul>
+
+		{% url 'rcl:main-join' as join_url %}
+		<p><strong>{% blocktrans %}Come <a href='{{ join_url }}'>join us</a>! Welcome home!{% endblocktrans %}</strong></p>
 
 {% endblock %}
 
-{% block extrascript %}
+{% block extra_script %}
 <script type="text/javascript">
     $('#menu-home').addClass('active');
 </script>
