--- a/apps/rcl/templates/rcl/main/base.html
+++ b/apps/rcl/templates/rcl/main/base.html
@@ -82,7 +82,7 @@
                                       <a href="{% url 'pybb:index' %}" >Forum</a>
                                   </li>
                                   <li class="dropdown" id="menu-user">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% firstof user.first_name user.email %} <b class="caret"></b></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% firstof user.username user.first_name user.email %} <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                       <li><a href="{% url 'users:profile-edit' %}">Profile</a></li>
                                       <li><a href="{% url 'pybb:edit_profile' %}">Forum Settings</a></li>
