Lots of minor changes, fixes, styles. Added new content. New FAQ section, and Vision Explained.

--- a/apps/rcl/templates/rcl/main/about.html
+++ b/apps/rcl/templates/rcl/main/about.html
@@ -1,10 +1,11 @@
 {% extends "rcl/main/base.html" %}
 {% load i18n %}
 
-{% block title%}{% trans "RCL" %} - {% trans "About Us" %}{% endblock %}
+{% block title%}{% trans "RCL" %} - {% trans "About" %}{% endblock %}
 
 {% block content %}
-
+	<h2>{% trans "About" %}</h2>
+	
 	<p>
 		{% blocktrans %}
 		We are an organically growing social movement without leadership. We are what each one of us makes of it. We are everyone who believes that we must distance ourselves from the global system of politics and capitalism and come together to create an alternative living solution that satisfies human needs without damaging the earth. We live self-determined lives within inclusive communities that value freedom and equality. We are peaceful activists on both the physical and metaphysical planes – we achieve independence and care for our planet by responsibly producing and freely sharing our food, energy and other resources, and we create peace on earth through the cultivation of inner peace and the evolution of consciousness. We are the change we want to see in the world. We see the oneness of existence and use our lives to serve ourselves, humanity, Mother Earth and all beings.
@@ -13,7 +14,7 @@
 
 	<p>
 		{% blocktrans %}
-		Our core values stem from our non-commercial rainbow gatherings – temporary autonomous zones in nature where people from all walks of life come together to share and to live in peace and harmony. The name “Rainbow Crystal Land” suggests that just as a crystal can contain a rainbow inside itself, the values of rainbow gatherings can be applied to the land and permanent communities. 
+		Our core values stem from our non-commercial rainbow gatherings – temporary autonomous zones in nature where people from all walks of life come together to share and to live in peace and harmony. The name “Rainbow Crystal Land” suggests that just as a crystal can contain a rainbow inside itself, the values of rainbow gatherings can be applied to the land and permanent communities.  
 		{% endblocktrans %}
 	</p>
 
