--- a/apps/rcl/templates/rcl/main/join.html
+++ b/apps/rcl/templates/rcl/main/join.html
@@ -4,6 +4,7 @@
 {% block title%}{% trans "RCL" %} - {% trans "How to Join" %}{% endblock %}
 
 {% block content %}
+	<h2>{% trans "How to Join" %}</h2>
 
 	<p>
 		{% blocktrans %}
@@ -13,13 +14,13 @@
 
    	<p>
    		{% blocktrans %}
-		Whether you’re passing through on your travels or want to find a place to live for the rest of your life, your energy is wanted and needed. On this website you’ll find a database of RCL Communities already in existence and Scouting Missions to find new ones around the world. Read about them to find a place that tickles your fancy, contact them through their Internet Focalizer or ask around in the forums… or just turn up!
+		Whether you’re passing through on your travels or want to find a place to live for the rest of your life, your energy is wanted and needed. On this website you’ll find a database of RCL Communities already in existence and Scouting Missions to find new ones around the world. Read about them to find a place that tickles your fancy, contact them through their Internet Focalizer or ask around in the forums... or just turn up! 
 		{% endblocktrans %}
 	</p>
 
 	<p>
 		{% blocktrans %}
-		Every RCL has a “carrying capacity”, meaning a maximum number of people the land and community can sustainably support. If we exceed that limit, we will be forced to either rely on capitalist mechanisms to sustain ourselves or to engage in non-sustainable food production methods, such as the use of chemicals, which is detrimental to both the health of humans and animals and to the quality of soil and water. Sustainability is therefore a key aspect of our vision and we are responsible as a worldwide family to respect the carrying capacities of our RCLs.
+		Every RCL has a “carrying capacity”, meaning a maximum number of people the land and community can sustainably support. If we exceed that limit, we will be forced to either rely on capitalist mechanisms to sustain ourselves or to engage in non-sustainable food production methods, such as the use of chemicals, which is detrimental to both the health of humans and animals and to the quality of soil and water. Sustainability is therefore a key aspect of our vision and we are responsible as a worldwide family to respect the carrying capacities of our RCLs. 
 		{% endblocktrans %}
 	</p>
 
