--- a/apps/rcl/templates/rcl/main/base.html
+++ b/apps/rcl/templates/rcl/main/base.html
@@ -31,7 +31,7 @@
 
         {# Show only this if DEBUG = True in settings #}
         {% if debug %}
-        <div class = "navbar-fixed-top">
+        <div class = "navbar-fixed-top test-site-warning">
             <div class="text-center alert alert-warning">{% trans "Warning: your are visiting the testing site, all <strong>data stored here can be erased at anytime.</strong>" %}</div>
         </div>
         {% endif %}
@@ -40,7 +40,7 @@
             <div class="span10 offset1">
 
                 <div class="row-fluid">
-                    <div class="header"><h1>Rainbow Crystal Land</h1></div>
+                    <div class="header"><h1>{% trans "Rainbow Crystal Land" %}</h1></div>
                 </div>
 
                 <div class="row-fluid">
@@ -61,38 +61,39 @@
                           <!-- Collect the nav links, forms, and other content for toggling -->
                           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
-                              <li id="menu-home"><a href="{% url 'home' %}">Home</a></li>
-                              <li id="menu-about"><a href="{% url 'rcl:main-about' %}">About Us</a></li>
+                              <li id="menu-home"><a href="{% url 'home' %}">{% trans "Home" %}</a></li>
+                              <li id="menu-about"><a href="{% url 'rcl:main-about' %}">{% trans "About" %}</a></li>
                               
                               <li class="dropdown" id="menu-vision">
-                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Vision<b class="caret"></b></a>
+                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Vision" %}<b class="caret"></b></a>
                                   <ul class="dropdown-menu">
-                                    <li id="menu-history"><a href="{% url 'rcl:main-history' %}">History</a></li>
-                                    <li id="menu-dci"><a href="{% url 'rcl:main-dci' %}">Declaration of Common Intention</a></li>
+                                    <li id="menu-dci"><a href="{% url 'rcl:main-dci' %}">{% trans "Declaration of Common Intention" %}</a></li>
+                                    <li id="main-vision-explained"><a href="{% url 'rcl:main-vision-explained' %}">{% trans "Vision Explained" %}</a></li>
                                   </ul>
                               </li>
 
-                              <li id="menu-join"><a href="{% url 'rcl:main-join' %}">How to Join</a></li>
-                              <li id="menu-donate"><a href="{% url 'rcl:main-donate' %}">Donate</a></li>
+                              <li id="menu-join"><a href="{% url 'rcl:main-join' %}">{% trans "How to Join" %}</a></li>
+                              <li id="menu-faq"><a href="{% url 'rcl:main-faq' %}">{% trans "FAQ" %}</a></li>
+                              <li id="menu-donate"><a href="{% url 'rcl:main-donate' %}">{% trans "Donate" %}</a></li>
                             </ul>
 
                               <ul class="nav navbar-nav navbar-right">
                                 {% if user.is_authenticated %}
                                   <li id="menu-forum">
-                                      <a href="{% url 'pybb:index' %}" >Forum</a>
+                                      <a href="{% url 'pybb:index' %}" >{% trans "Forum" %}</a>
                                   </li>
                                   <li class="dropdown" id="menu-user">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% firstof user.username user.first_name user.email %} <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                      <li><a href="{% url 'users:profile-edit' %}">Profile</a></li>
-                                      <li><a href="{% url 'pybb:edit_profile' %}">Forum Settings</a></li>
-                                      <li><a id="menu-logout" href="{% url 'auth_logout' %}">Logout</a></li>
+                                      <li><a href="{% url 'users:profile-edit' %}">{% trans "Profile" %}</a></li>
+                                      <li><a href="{% url 'pybb:edit_profile' %}">{% trans "Forum Settings" %}</a></li>
+                                      <li><a id="menu-logout" href="{% url 'auth_logout' %}">{% trans "Logout" %}</a></li>
                                 {% else %}
                                     <li id="menu-login">
-                                      <a href="{% url 'auth_login' %}" >Login</a>
+                                      <a href="{% url 'auth_login' %}" >{% trans "Login" %}</a>
                                     </li>
                                     <li id="menu-login">
-                                      <a href="{% url 'registration_register' %}" >Register</a>
+                                      <a href="{% url 'registration_register' %}" >{% trans "Register" %}</a>
                                     </li>
                                 {% endif %}
                               </ul>
@@ -116,11 +117,11 @@
         </div>
         <div id="push"></div>
 
-        <div class = "navbar navbar-default navbar-fixed-bottom footer">
+        <!--div class = "navbar navbar-default navbar-fixed-bottom footer">
             <div class = "container">
             <a href="{% url 'home'%}">Home</a> | <a href="#">Contact Us</a>
           </div>
-        </div>
+        </div-->
 
         <!-- Javascript files -->
         <script src="{% static 'js/jquery-1.8.0.min.js' %}"></script>
