--- a/apps/rcl/templates/rcl/main/dci.html
+++ b/apps/rcl/templates/rcl/main/dci.html
@@ -4,7 +4,8 @@
 {% block title%}{% trans "RCL" %} - {% trans "Declaration of Common Intention" %}{% endblock %}
 
 {% block content %}
-
+	<h2>{% trans "Declaration of Common Intention" %}</h2>
+	
 	<!-- Nav tabs -->
 	<ul id="dci-tab" class="nav nav-tabs">
 	  <li><a href="#dci-part1" data-toggle="tab">Part I: Vision</a></li>
