--- a/apps/rcl/templates/rcl/main/donate.html
+++ b/apps/rcl/templates/rcl/main/donate.html
@@ -4,48 +4,21 @@
 {% block title%}{% trans "RCL" %} - {% trans "Donate" %}{% endblock %}
 
 {% block content %}
-
+	<h2>{% trans "Donate" %}</h2>
+	
 	<p>
     {% blocktrans %}
-    	Aho! Thanks for your interest in Donating and helping to manifiest our vision. There different missions/areas in which you can donate, each of them have a particular Focalizer that receives the money and uses or redistribute it according to the needs of the mission at the time.
+    	Aho! Thanks for your interest in Donating and helping to manifiest our vision. There are different missions/areas in which you can donate, each of them have a particular Focalizer that receives the money and uses or redistributes it according to the needs of the mission at the time.
     {% endblocktrans %}
     </p>
 
-
-    <div class="panel panel-warning">
-  		<div class="panel-heading">{% trans "Scouting in Los Andes" %}</div>
-  		<div class="panel-body">
-		    {% blocktrans %}
-		    	There is a group of brothers and sisters looking for a proper land in the Sacred Valley in Peru where to build and share another Rainbow Crystal Land.
-		    {% endblocktrans %}
-
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-			<p style="text-align: center;">
-				<input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="YB5UFGPVX5M5A"> <input alt="PayPal â€“ The safer, easier way to pay online." border="0" name="submit" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" type="image"> <img alt="" border="0" height="1" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1"></p>
-		</form>
-		</div>
-	</div>
-
-	<div class="panel panel-success">
-  		<div class="panel-heading">{% trans "RCL Costa Rica" %}</div>
-  		<div class="panel-body">
-		    {% blocktrans %}
-		    	There is quite new Rainbow Crystal Land in Costa Rica growing and we still need some financial help. Your help will be much appreciated!
-		    {% endblocktrans %}
-
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-			<p style="text-align: center;">
-			<input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="86F92ZZ5T6DHW"> <input alt="PayPal - The safer, easier way to pay online!" border="0" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" type="image"> <img alt="" border="0" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"></p>
-			</form>
-		</div>
-	</div>
-
-	<div class="panel panel-info">
+    <br>
+    <div class="panel panel-info">
   		<div class="panel-heading">{% trans "Common Website" %}</div>
   		<div class="panel-body">
   			<p>
 		    {% blocktrans %}
-		    	This is exactly the website that you are using right now. It has been done with the collaboration of different volunteers but we still need some money to pay hosting and domain name services.
+		    	This is the website that you are using right now. It has been created with the collaboration of different volunteers but we still need some money to pay hosting and domain name services.
 		    {% endblocktrans %}
 		    </p>
 
@@ -56,11 +29,60 @@
 
 			<p>
 		    {% blocktrans %}
-		    	Donating is no the only way to contribute, if you are a web developer, have web designing skills or you speak more than one language and can translate among them you can also help! Take a look <a href="https://github.com/RainbowCrystalLand/rcl-network/wiki#how-to-contribute">here</a>.
+		    	Donating is no the only way to contribute, if you are a web developer, have web designing skills or you speak more than one language and can translate among them you can also help! Take a look <a target="_blank" href="https://github.com/RainbowCrystalLand/rcl-network/wiki#how-to-contribute">here</a>.
 		    {% endblocktrans %}
+		    </p>
+
+		    <br>
+		    <p>
+		    	{% blocktrans %}
+		    	<strong>Current Focalizer</strong>: Santi (from Argentina)
+		    	{% endblocktrans %}
 		    </p>
 		</div>
 	</div>
+
+    <div class="panel panel-warning">
+  		<div class="panel-heading">{% trans "Scouting in Los Andes" %}</div>
+  		<div class="panel-body">
+		    {% blocktrans %}
+		    	There is a group of brothers and sisters looking for a suitable land in the Sacred Valley in Peru, to create another Rainbow Crystal Land.
+		    {% endblocktrans %}
+
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<p style="text-align: center;">
+				<input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="YB5UFGPVX5M5A"> <input alt="PayPal â€“ The safer, easier way to pay online." border="0" name="submit" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" type="image"> <img alt="" border="0" height="1" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1"></p>
+		</form>
+
+			<p>
+		    	{% blocktrans %}
+		    	<strong>Current Focalizer</strong>: Martin (from Belgium)
+		    	{% endblocktrans %}
+		    </p>
+		</div>
+	</div>
+
+	<div class="panel panel-success">
+  		<div class="panel-heading">{% trans "RCL Costa Rica" %}</div>
+  		<div class="panel-body">
+		    {% blocktrans %}
+		    	There is a quite new Rainbow Crystal Land in Costa Rica which is still in the process of growing, and we still need some financial help. Your help will be much appreciated!
+		    {% endblocktrans %}
+
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<p style="text-align: center;">
+			<input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="86F92ZZ5T6DHW"> <input alt="PayPal - The safer, easier way to pay online!" border="0" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" type="image"> <img alt="" border="0" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1"></p>
+			</form>
+
+			<p>
+		    	{% blocktrans %}
+		    	<strong>Current Focalizer</strong>: Portal (from Japan)
+		    	{% endblocktrans %}
+		    </p>
+		</div>
+	</div>
+
+	
 
 
 
