--- a/templates/pybb/post_form.html
+++ b/templates/pybb/post_form.html
@@ -1,5 +1,8 @@
 {% load url from future %}
 {% load i18n pybb_tags crispy_forms_tags %}
+
+{% include "pybb/form_errors.html" %}
+
 <form role="form" class="post-form form-horizontal" action="
     {% if forum %}
         {% url 'pybb:add_topic' forum.pk %}
@@ -11,10 +14,9 @@
         {% endif %}
     {% endif %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    
     {{ form|crispy }}
     <div id='emoticons' class="form-group">
-      <label for="id_emoticons" class="control-label col-lg-2"></label>
+      <label for="id_em oticons" class="control-label col-lg-2"></label>
       <div class="controls col-lg-8">
       {% for smile, url in form.available_smiles.items %}
         <a href='#' title='{{ smile|safe }}'><img src='{{ STATIC_URL }}{{ form.smiles_prefix }}{{ url }}'></a>
